initialize client project

--- a/MailBo/App.config
+++ b/MailBo/App.config
@@ -12,7 +12,7 @@
   <system.serviceModel>
     <services>
       <service name="MailBo.SignOnService">
-        <endpoint address="" binding="basicHttpBinding" contract="MailBo.IService1">
+        <endpoint address="" binding="basicHttpBinding" contract="MailBo.ISignOnService">
           <identity>
             <dns value="localhost" />
           </identity>
