--- a/MailBoService/Web.config
+++ b/MailBoService/Web.config
@@ -12,20 +12,24 @@
     </httpModules>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service behaviorConfiguration="MyServiceTypeBehaviors" name="MailBoService.SignOnService">
+        <endpoint address="pqr" binding="wsHttpBinding" name="c" contract="MailBoService.ISignOnService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:75/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+        <behavior name="MyServiceTypeBehaviors" >
+          <serviceMetadata httpGetEnabled="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https"/>
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
