--- a/MailBo/App.config
+++ b/MailBo/App.config
@@ -10,6 +10,20 @@
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="c" />
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:95/pqr" binding="wsHttpBinding"
+        bindingConfiguration="c" contract="MailBoServiceRef.ISignOnService"
+        name="c">
+        <identity>
+          <userPrincipalName value="LENOVO\Nebojsha" />
+        </identity>
+      </endpoint>
+    </client>
     <services>
       <service name="MailBo.SignOnService">
         <endpoint address="" binding="basicHttpBinding" contract="MailBo.ISignOnService">
