--- a/MailBo/MailBo.ConsumerApi.csproj
+++ b/MailBo/MailBo.ConsumerApi.csproj
@@ -51,6 +51,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Reoisutories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
