--- a/MailBoService/MailBoService.csproj
+++ b/MailBoService/MailBoService.csproj
@@ -95,6 +95,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContracts\Message.cs" />
     <Compile Include="ISignOnService.cs" />
     <Compile Include="SignOnService.svc.cs">
       <DependentUpon>SignOnService.svc</DependentUpon>
