--- a/MailBoService.Tests/MailBoService.Tests.csproj
+++ b/MailBoService.Tests/MailBoService.Tests.csproj
@@ -77,6 +77,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Models\UserLoginTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignOnServiceTest.cs" />
   </ItemGroup>
